// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Stepper HeaderVariants 1`] = `
<div>
  <div
    class="steppers bg-dark"
  >
    <div
      class="steppers-header"
    >
      <ul>
        <li
          class="confirmed"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M9.6 16.9 4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7-9.2 9.1z"
            />
          </svg>
          Primo contenuto
        </li>
        <li
          class="active"
        >
          Secondo contenuto
        </li>
        <li
          class=""
        >
          Terzo contnuto
        </li>
        <span
          class="steppers-index"
        >
          2/6
        </span>
      </ul>
    </div>
    <div
      class="steppers-header"
    >
      <ul>
        <li
          class="confirmed"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M20.5 4H17V3h-1v1H8V3H7v1H3.5C2.7 4 2 4.7 2 5.5v13c0 .8.7 1.5 1.5 1.5h17c.8 0 1.5-.7 1.5-1.5v-13c0-.8-.7-1.5-1.5-1.5zm.5 14.5c0 .3-.2.5-.5.5h-17c-.3 0-.5-.2-.5-.5v-13c0-.3.2-.5.5-.5H7v1h1V5h8v1h1V5h3.5c.3 0 .5.2.5.5v13zM4 8h16v1H4V8z"
            />
          </svg>
          Primo contenuto
          <svg
            class="icon icon steppers-success"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M9.6 16.9 4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7-9.2 9.1z"
            />
          </svg>
        </li>
        <li
          class="active"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M18.5 8.5H17V8c0-2.8-2.2-5-5-5S7 5.2 7 8v.5H5.5C4.7 8.5 4 9.2 4 10v8.5c0 .8.7 1.5 1.5 1.5h13c.8 0 1.5-.7 1.5-1.5V10c0-.8-.7-1.5-1.5-1.5zM8 8c0-2.2 1.8-4 4-4s4 1.8 4 4v.5H8V8zm11 10.5c0 .3-.2.5-.5.5h-13c-.3 0-.5-.2-.5-.5V10c0-.3.2-.5.5-.5h13c.3 0 .5.2.5.5v8.5z"
            />
            <path
              d="M12 13.3c.6 0 1 .4 1 1s-.4 1-1 1-1-.4-1-1 .4-1 1-1m0-1c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
          Secondo contenuto
        </li>
        <li
          class=""
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M12 7.5c-2.5 0-4.5 2-4.5 4.5s2 4.5 4.5 4.5 4.5-2 4.5-4.5-2-4.5-4.5-4.5zm0 8c-1.9 0-3.5-1.6-3.5-3.5s1.6-3.5 3.5-3.5 3.5 1.6 3.5 3.5-1.6 3.5-3.5 3.5zm9.8-1.6c.1-.6.2-1.3.2-1.9 0-.6-.1-1.3-.2-1.9l-2.1-.3c-.2-.6-.4-1.2-.7-1.7l1.3-1.7c-.7-1.1-1.6-2-2.7-2.7L15.9 5l-1.7-.7-.3-2.1L12 2l-1.9.2-.3 2.1-1.7.7-1.7-1.3c-1.1.7-2 1.6-2.7 2.7L5 8.1c-.3.5-.5 1.1-.7 1.7l-2.1.3c-.1.6-.2 1.3-.2 1.9 0 .6.1 1.3.2 1.9l2.1.3c.2.6.4 1.2.7 1.7l-1.3 1.7c.7 1.1 1.6 2 2.7 2.7L8.1 19l1.7.7.3 2.1 1.9.2 1.9-.2.3-2.1 1.7-.7 1.7 1.3c1.1-.7 2-1.6 2.7-2.7L19 15.9c.3-.5.5-1.1.7-1.7l2.1-.3zm-2.9-.7-.2.7c-.1.5-.3 1-.6 1.5l-.3.6.4.5.8 1.1c-.4.5-.9 1-1.4 1.4l-1.1-.8-.5-.4-.6.3c-.5.3-1 .5-1.5.6l-.7.2v.7l-.2 1.3h-2l-.2-1.3v-.7l-.7-.2c-.5-.1-1-.3-1.5-.6l-.6-.3-.5.4-1.1.8c-.5-.4-1-.9-1.4-1.4l.8-1.1.4-.5-.3-.6c-.3-.5-.5-1-.6-1.5l-.2-.7h-.7L3.1 13c-.1-.3-.1-.7-.1-1 0-.3 0-.7.1-1l1.3-.2h.7l.2-.7c.1-.5.3-1 .6-1.5l.3-.6-.4-.5L5 6.4 6.4 5l1.1.8.5.4.6-.3c.5-.3 1-.5 1.5-.6l.7-.2v-.7l.2-1.3h2l.2 1.3v.7l.7.2c.5.1 1 .3 1.5.6l.6.3.5-.4 1.1-.8c.5.4 1 .9 1.4 1.4l-.8 1.1-.4.5.3.6c.3.5.5 1 .6 1.5l.2.7h.7l1.3.2c.1.3.1.7.1 1 0 .3 0 .7-.1 1l-1.3.2h-.7z"
            />
          </svg>
          Terzo contenuto
        </li>
        <span
          class="steppers-index"
        >
          2/6
        </span>
      </ul>
    </div>
    <div
      class="steppers-header"
    >
      <ul>
        <li
          class="confirmed"
        >
          <span
            class="steppers-number"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M9.6 16.9 4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7-9.2 9.1z"
              />
            </svg>
          </span>
          Primo contenuto
        </li>
        <li
          class="active no-line"
        >
          <span
            class="steppers-number"
          >
            <span>
              2
            </span>
          </span>
          Secondo contenuto
        </li>
        <li
          class=""
        >
          <span
            class="steppers-number"
          >
            <span>
              3
            </span>
          </span>
          Terzo contenuto
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Stepper NavigationOfTheSteps 1`] = `
<div>
  <div
    class="steppers"
  >
    <div
      class="steppers-header"
    >
      <ul>
        <li
          class="confirmed"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M9.6 16.9 4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7-9.2 9.1z"
            />
          </svg>
          Primo contenuto
        </li>
        <li
          class="active"
        >
          Secondo contenuto
        </li>
        <li
          class=""
        >
          Terzo contenuto
        </li>
        <span
          class="steppers-index"
        >
          2/6
        </span>
      </ul>
    </div>
    <div
      aria-live="polite"
      class="steppers-content"
      style="height: 400px; border: 2px dashed #eee; background: rgb(250, 250, 250); display: flex; justify-content: center; align-items: center; color: rgb(51, 51, 51);"
    >
      <p>
        Contenuto di esempio dello step corrente
      </p>
    </div>
    <nav
      class="steppers-nav"
    >
      <button
        class="steppers-btn-prev btn btn-outline-primary btn-sm"
      >
        <svg
          class="icon icon-primary"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
          />
        </svg>
        Indietro
      </button>
      <button
        class="steppers-btn-next btn btn-outline-primary btn-sm"
      >
        Avanti
        <svg
          class="icon icon-primary"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
          />
        </svg>
      </button>
      <button
        class="steppers-btn-confirm d-none d-lg-block btn btn-primary btn-sm"
      >
        Conferma
      </button>
    </nav>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Stepper OrderOfTheSteps 1`] = `
<div>
  <div
    class="steppers"
  >
    <div
      class="steppers-header"
    >
      <ul>
        <li
          class="confirmed"
        >
          <span
            class="steppers-number"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M9.6 16.9 4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7-9.2 9.1z"
              />
            </svg>
          </span>
          Primo contenuto
        </li>
        <li
          class="active no-line"
        >
          <span
            class="steppers-number"
          >
            <span>
              2
            </span>
          </span>
          Secondo contenuto
        </li>
        <li
          class=""
        >
          <span
            class="steppers-number"
          >
            <span>
              3
            </span>
          </span>
          Terzo contenuto
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Stepper TextAndIcons 1`] = `
<div>
  <div
    class="steppers"
  >
    <div
      class="steppers-header"
    >
      <ul>
        <li
          class="confirmed"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M20.5 4H17V3h-1v1H8V3H7v1H3.5C2.7 4 2 4.7 2 5.5v13c0 .8.7 1.5 1.5 1.5h17c.8 0 1.5-.7 1.5-1.5v-13c0-.8-.7-1.5-1.5-1.5zm.5 14.5c0 .3-.2.5-.5.5h-17c-.3 0-.5-.2-.5-.5v-13c0-.3.2-.5.5-.5H7v1h1V5h8v1h1V5h3.5c.3 0 .5.2.5.5v13zM4 8h16v1H4V8z"
            />
          </svg>
          Primo contenuto
          <svg
            class="icon icon steppers-success"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M9.6 16.9 4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7-9.2 9.1z"
            />
          </svg>
        </li>
        <li
          class="active"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M18.5 8.5H17V8c0-2.8-2.2-5-5-5S7 5.2 7 8v.5H5.5C4.7 8.5 4 9.2 4 10v8.5c0 .8.7 1.5 1.5 1.5h13c.8 0 1.5-.7 1.5-1.5V10c0-.8-.7-1.5-1.5-1.5zM8 8c0-2.2 1.8-4 4-4s4 1.8 4 4v.5H8V8zm11 10.5c0 .3-.2.5-.5.5h-13c-.3 0-.5-.2-.5-.5V10c0-.3.2-.5.5-.5h13c.3 0 .5.2.5.5v8.5z"
            />
            <path
              d="M12 13.3c.6 0 1 .4 1 1s-.4 1-1 1-1-.4-1-1 .4-1 1-1m0-1c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
          Secondo contenuto
        </li>
        <li
          class=""
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M12 7.5c-2.5 0-4.5 2-4.5 4.5s2 4.5 4.5 4.5 4.5-2 4.5-4.5-2-4.5-4.5-4.5zm0 8c-1.9 0-3.5-1.6-3.5-3.5s1.6-3.5 3.5-3.5 3.5 1.6 3.5 3.5-1.6 3.5-3.5 3.5zm9.8-1.6c.1-.6.2-1.3.2-1.9 0-.6-.1-1.3-.2-1.9l-2.1-.3c-.2-.6-.4-1.2-.7-1.7l1.3-1.7c-.7-1.1-1.6-2-2.7-2.7L15.9 5l-1.7-.7-.3-2.1L12 2l-1.9.2-.3 2.1-1.7.7-1.7-1.3c-1.1.7-2 1.6-2.7 2.7L5 8.1c-.3.5-.5 1.1-.7 1.7l-2.1.3c-.1.6-.2 1.3-.2 1.9 0 .6.1 1.3.2 1.9l2.1.3c.2.6.4 1.2.7 1.7l-1.3 1.7c.7 1.1 1.6 2 2.7 2.7L8.1 19l1.7.7.3 2.1 1.9.2 1.9-.2.3-2.1 1.7-.7 1.7 1.3c1.1-.7 2-1.6 2.7-2.7L19 15.9c.3-.5.5-1.1.7-1.7l2.1-.3zm-2.9-.7-.2.7c-.1.5-.3 1-.6 1.5l-.3.6.4.5.8 1.1c-.4.5-.9 1-1.4 1.4l-1.1-.8-.5-.4-.6.3c-.5.3-1 .5-1.5.6l-.7.2v.7l-.2 1.3h-2l-.2-1.3v-.7l-.7-.2c-.5-.1-1-.3-1.5-.6l-.6-.3-.5.4-1.1.8c-.5-.4-1-.9-1.4-1.4l.8-1.1.4-.5-.3-.6c-.3-.5-.5-1-.6-1.5l-.2-.7h-.7L3.1 13c-.1-.3-.1-.7-.1-1 0-.3 0-.7.1-1l1.3-.2h.7l.2-.7c.1-.5.3-1 .6-1.5l.3-.6-.4-.5L5 6.4 6.4 5l1.1.8.5.4.6-.3c.5-.3 1-.5 1.5-.6l.7-.2v-.7l.2-1.3h2l.2 1.3v.7l.7.2c.5.1 1 .3 1.5.6l.6.3.5-.4 1.1-.8c.5.4 1 .9 1.4 1.4l-.8 1.1-.4.5.3.6c.3.5.5 1 .6 1.5l.2.7h.7l1.3.2c.1.3.1.7.1 1 0 .3 0 .7-.1 1l-1.3.2h-.7z"
            />
          </svg>
          Terzo contenuto
        </li>
        <span
          class="steppers-index"
        >
          2/6
        </span>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Stepper TextOnly 1`] = `
<div>
  <div
    class="steppers"
  >
    <div
      class="steppers-header"
    >
      <ul>
        <li
          class="confirmed"
        >
          Primo contenuto
          <svg
            class="icon icon steppers-success"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M9.6 16.9 4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7-9.2 9.1z"
            />
          </svg>
        </li>
        <li
          class="active"
        >
          Secondo contenuto
        </li>
        <li
          class=""
        >
          Terzo contenuto
        </li>
        <span
          class="steppers-index"
        >
          2/6
        </span>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Stepper VersionOnADarkBackground 1`] = `
<div>
  <div
    class="steppers bg-dark"
  >
    <div
      class="steppers-header"
    >
      <ul>
        <li
          class="confirmed"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M9.6 16.9 4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7-9.2 9.1z"
            />
          </svg>
          Primo contenuto
        </li>
        <li
          class="active"
        >
          Secondo contenuto
        </li>
        <li
          class=""
        >
          Terzo contenuto
        </li>
        <span
          class="steppers-index"
        >
          2/6
        </span>
      </ul>
    </div>
    <div
      aria-live="polite"
      class="steppers-content"
      style="height: 400px; border: 2px dashed #eee; display: flex; justify-content: center; align-items: center; color: rgb(238, 238, 238); border-color: #aaa; background: rgb(23, 50, 77); opacity: 0.5;"
    >
      <p>
        Contenuto di esempio dello step corrente
      </p>
    </div>
    <nav
      class="steppers-nav"
    >
      <button
        class="steppers-btn-prev btn btn-outline-primary btn-sm"
      >
        <svg
          class="icon icon-primary"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
          />
        </svg>
        Indietro
      </button>
      <button
        class="steppers-btn-next btn btn-outline-primary btn-sm"
      >
        Avanti
        <svg
          class="icon icon-primary"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
          />
        </svg>
      </button>
      <button
        class="stepper-btn-confirm d-none d-lg-block btn btn-primary btn-sm"
      >
        Conferma
      </button>
    </nav>
  </div>
</div>
`;
